Anonymous | Login | 2021-01-15 21:15 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] [ Related Changesets ] | [ Issue History ] [ Print ] | ||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||
0031340 | Open CASCADE | [OCCT] OCCT:Application Framework | public | 2020-01-31 18:18 | 2020-12-02 17:12 | ||||
Reporter | abv | ||||||||
Assigned To | bugmaster | ||||||||
Priority | normal | Severity | minor | ||||||
Status | closed | Resolution | fixed | ||||||
Platform | OS | OS Version | |||||||
Product Version | |||||||||
Target Version | [OCCT] 7.5.0 | Fixed in Version | [OCCT] 7.5.0 | ||||||
Summary | 0031340: Application Framework - LDOM fails to read XML file starting with BOM | ||||||||
Description | If XML file has BOM (Byte Order Mark) in the beginning, LDOM_XmlReader fails to find any XML data inside it, and returns empty document. Sample file is attached | ||||||||
Steps To Reproduce | In DRAW: pload QAcommands OCC983 DataDict_withBOM.xml current output: Document not parsed expected output: Document parsed RootName = datadictionary AttributeName = version AttributeValue = 3.0 ElementName = component AttributeName = name AttributeValue = Input data Added test: bugs fclasses bug31340 | ||||||||
Tags | No tags attached. | ||||||||
Test case number | bugs/fclasses/bug31340 | ||||||||
Attached Files | ![]() | ||||||||
![]() |
|||||||||||||
|
![]() |
|
(0093865) git (administrator) 2020-09-02 13:50 |
Branch CR31340 has been created by mpv. SHA-1: 77c83920ca1f2b25859a20c98aee857f33fe298c Detailed log of new commits: Author: mpv Date: Wed Sep 2 13:53:07 2020 +0300 0031340: LDOM fails to read XML file starting with BOM Added support of BOM (byte order mask) characters at the start of an XML stream or file and provided information about found BOM in LDOMParser. |
(0093936) mpv (developer) 2020-09-02 20:43 |
Fixed with possibility to get BOM information from the LDOM parser. Please, review. |
(0093937) mpv (developer) 2020-09-02 20:44 |
http://occt-tests/CR31340-master-MPV-OCCT/Debian80-64/diff_summary.html [^] http://occt-tests/CR31340-master-MPV-Products/Debian80-64/diff_summary.html [^] http://occt-tests/CR31340-master-MPV-OCCT/Windows-64-VC14/diff_summary.html [^] http://occt-tests/CR31340-master-MPV-Products/Windows-64-VC14/diff_summary.html [^] |
(0093982) szy (manager) 2020-09-03 14:30 |
Reviewed. |
(0094008) git (administrator) 2020-09-04 11:22 |
Branch CR31340 has been updated by mpv. SHA-1: 1f0953e17d7129546c27dbcee734c7cab0121fc0 Detailed log of new commits: Author: mpv Date: Fri Sep 4 11:25:24 2020 +0300 # fix for the VS !=141 compilation |
(0094015) git (administrator) 2020-09-04 15:34 |
Branch CR31340 has been updated by mpv. SHA-1: 66a65fd62da06af4cc08b4c102e68490dfc7779c Detailed log of new commits: Author: mpv Date: Fri Sep 4 15:36:43 2020 +0300 # removed warnings of compilation for Android |
(0094068) bugmaster (administrator) 2020-09-05 12:10 |
Combination - OCCT branch : IR-2020-09-04 master SHA - a516227511f3452f9f55b79c961265b0bf210793 a206de37fbfa0bf71bd534ae47192bbec23b8522 Products branch : IR-2020-09-04 SHA - 134448d280fb82bfb14ffc6255ac1cb53f7fd1cf was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 17319.18000000012 / 17284.370000000214 [+0.20%] Products Total CPU difference: 12059.670000000087 / 12007.590000000067 [+0.43%] Windows-64-VC14: OCCT Total CPU difference: 18776.390625 / 18770.796875 [+0.03%] Products Total CPU difference: 13251.640625 / 13222.90625 [+0.22%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
(0094074) git (administrator) 2020-09-05 12:34 |
Branch CR31340 has been deleted by inv. SHA-1: 66a65fd62da06af4cc08b4c102e68490dfc7779c |
![]() |
|||
occt: master 8f34d47e
Timestamp: 2020-09-02 10:53:07 Author: mpv Committer: bugmaster [ Details ] [ Diff ] |
0031340: LDOM fails to read XML file starting with BOM Added support of BOM (byte order mask) characters at the start of an XML stream or file and provided information about found BOM in LDOMParser. |
||
mod - src/LDOM/LDOMParser.cxx | [ Diff ] [ File ] | ||
mod - src/LDOM/LDOMParser.hxx | [ Diff ] [ File ] | ||
mod - src/LDOM/LDOM_OSStream.hxx | [ Diff ] [ File ] | ||
mod - src/LDOM/LDOM_XmlReader.cxx | [ Diff ] [ File ] | ||
mod - src/LDOM/LDOM_XmlReader.hxx | [ Diff ] [ File ] | ||
mod - src/QABugs/QABugs_14.cxx | [ Diff ] [ File ] | ||
add - tests/bugs/fclasses/bug31340 | [ Diff ] [ File ] | ||
![]() |
|||
Date Modified | Username | Field | Change |
2020-01-31 18:18 | abv | New Issue | |
2020-01-31 18:18 | abv | Assigned To | => mpv |
2020-01-31 18:18 | abv | File Added: DataDict_withBOM.xml | |
2020-09-02 13:50 | git | Note Added: 0093865 | |
2020-09-02 14:20 | kgv | Summary | LDOM fails to read XML file starting with BOM => Application Framework - LDOM fails to read XML file starting with BOM |
2020-09-02 20:43 | mpv | Note Added: 0093936 | |
2020-09-02 20:43 | mpv | Assigned To | mpv => szy |
2020-09-02 20:43 | mpv | Status | new => resolved |
2020-09-02 20:43 | mpv | Steps to Reproduce Updated | View Revisions |
2020-09-02 20:44 | mpv | Note Added: 0093937 | |
2020-09-03 14:30 | szy | Note Added: 0093982 | |
2020-09-03 14:30 | szy | Assigned To | szy => bugmaster |
2020-09-03 14:30 | szy | Status | resolved => reviewed |
2020-09-04 11:22 | git | Note Added: 0094008 | |
2020-09-04 15:34 | git | Note Added: 0094015 | |
2020-09-05 12:10 | bugmaster | Note Added: 0094068 | |
2020-09-05 12:10 | bugmaster | Status | reviewed => tested |
2020-09-05 12:24 | bugmaster | Test case number | => bugs/fclasses/bug31340 |
2020-09-05 12:25 | bugmaster | Changeset attached | => occt master 8f34d47e |
2020-09-05 12:25 | bugmaster | Status | tested => verified |
2020-09-05 12:25 | bugmaster | Resolution | open => fixed |
2020-09-05 12:34 | git | Note Added: 0094074 | |
2020-10-12 17:31 | kgv | Relationship added | parent of 0031841 |
2020-10-14 12:02 | kgv | Relationship added | related to 0005032 |
2020-10-14 12:02 | kgv | Relationship added | child of 0022484 |
2020-12-02 16:22 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |
Copyright © 2000 - 2021 MantisBT Team |