0031340: LDOM fails to read XML file starting with BOM

Added support of BOM (byte order mask) characters at the start of an XML stream or file and provided information about found BOM in LDOMParser.