src/LDOM/LDOM_OSStream.hxx
@@ -112,6 +112,23 @@ public:
 
  private:
   LDOM_SBuffer myBuffer;
+
+public:
+  // byte order mark defined at the start of a stream
+  enum BOMType {
+    BOM_UNDEFINED,
+    BOM_UTF8,
+    BOM_UTF16BE,
+    BOM_UTF16LE,
+    BOM_UTF32BE,
+    BOM_UTF32LE,
+    BOM_UTF7,
+    BOM_UTF1,
+    BOM_UTFEBCDIC,
+    BOM_SCSU,
+    BOM_BOCU1,
+    BOM_GB18030
+  };
 };
 
 #endif
